# medchem-fragment-atlas

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: pages.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: fragments.py  molecules.py  search.py
backend/app/core/: config.py
backend/app/db/: duckdb.py
backend/app/services/: fragment_service.py  image_service.py  molecule_service.py
backend/scripts/: 00_prepare_chembl.py  01_fragment_chembl.py  02_compute_descriptors.py  03_aggregate_fragments.py  04_build_search_index.py  05_generate_figures.py  06_import_tdc_admet.py  07_validation_experiments.py  08_export_manuscript_summary.py  09_ml_solubility_fragment_features.py  98_fetch_chembl_prototype.py  99_download_chembl36.py
backend/tests/: test_api.py  test_brics.py  test_descriptors.py
data/raw/: sample_admet_measurements.csv  sample_molecules.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/demo/: fragments.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AdmetHeatmap.tsx  FragmentCard.tsx  FragmentTable.tsx  MoleculeGrid.tsx  PropertyDistribution.tsx  SearchFilters.tsx
frontend/src/pages/: FragmentComparePage.tsx  (+3 more)
reports/: build_preprint_docx.py
reports/case_studies/: fragment_admet_case_studies.md
reports/manuscript/: manuscript_summary.json  medchem_fragment_atlas_preprint.docx
reports/tables/: fragment_admet_case_studies.csv
(+8 files in other folders)
