[project]
name = "medchem-fragment-atlas-backend"
version = "0.1.0"
description = "BRICS fragment dictionary pipeline and FastAPI service for medicinal chemistry."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=0.10",
  "fastapi>=0.110",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "rdkit>=2023.9",
  "scikit-learn>=1.4",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.4",
]
polars = ["polars>=0.20"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"
